portfolio/src/main/resources/static/styles/group/group.css
:root {
    /* CSS variables */
    --color-primary: #FBAA60;
    --color-secondary: #FADFC6FF;
    --color-tertiary: #F67B50;
    --color-complement: #F4EAE6;
    --color-accent: #A82810;
}


/* Hide scrollbar */
html::-webkit-scrollbar {
    /* Chrome, Safari, Opera */
    display: none;
}

html {
    -ms-overflow-style: none; /* IE, Edge */
    scrollbar-width: none; /* Firefox */
}

/* Simple class for hiding components */
.hidden {
    display: none !important;
}

/* Group Header */

#group {
    position: relative;

    padding-top: 0;
    padding-bottom: 0;
    border: 1px solid var(--color-accent);
    border-radius: 10px;
    background-color: var(--color-complement);

    overflow: hidden;
}

#group header {
    padding: 15px 15px 15px 15px;
    border-bottom: 1px solid var(--color-accent);

    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
    color: var(--color-complement);
}

.group-short-name {
    font-weight: 400;
    margin: 0 0 1rem 0;
    width: calc(100% - 15rem);
    word-wrap: break-word;
}

.group__button-wrapper {
    position: absolute;
    top: 5.5rem;
    right: 0;
}

.group__button-wrapper button {
    /* Position & Size */
    margin-right: 1rem;
    padding: 0 1rem 0 1rem;
    min-width: 4rem;
    height: 3rem;
    line-height: 3rem;

    /* Text */
    font-size: 1rem;
    font-weight: 400;
}

.group__button-wrapper button:hover {
    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
    cursor: pointer;
}

/* Tab Buttons */

.carousel-buttons {
    justify-content: space-between;
    /*width: 100%;*/
    margin-top: 1rem;
    gap: 15px;
}

.btn-fill-tertiary {
    color: white;
    border-color: var(--color-accent);
    background-color: #e06c41;
    border-radius: 3px;
    height: 3rem;
    box-shadow: none !important;
    width: 100%;
    font-size: 1.5rem;
}

.btn-fill-tertiary:hover {
    color: #f78e55;
    border-color: #f78e55;
    background-color: #f4ebe6;
    height: 3rem;
    box-shadow: none !important;
    width: 100%;
    font-size: 1.5rem;
}

/* Group Home */

.group-home {
    padding-top: 20px;
}

.group-members {
    background-color: var(--color-secondary);
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    margin: 5px;
    padding: 10px;
}


.group-members__container {
    display: flex;
    flex-direction: column;
    padding-top: 10px;
    max-height: 22rem;
    overflow-y: auto;
    border-top: 1px solid var(--color-accent);
}

.group-member__container {
}

.group-member__link {
    text-decoration: none;
    color: black;
    display: flex;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    flex-direction: row;
    padding-top: 15px;
    padding-left: 10px;
    padding-right: 30px;
}

.group-member__link:hover {
    color: var(--color-tertiary);
}

.group-member__image {
    max-width: 50px;
    max-height: 50px;
    border-radius: 50px;
}

.group-member__name-container {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-size: 20px;
    padding-left: 20px;
}

.group-member__nickname {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-size: 20px;
    margin-left: auto;
}

/* Group Statistics */
.group-chart__settings-div {
    margin: 1rem 0 1rem 0;
    border-radius: 10px;
    background-color: var(--color-secondary);
    padding: 25px;
    color: black;
    font-size: 20px;
}

#group-chart__graph-div {
    display: flex;
    height: 800px;
}


/* Group Repository */

#group-repository-form__wrapper {
    display: block;
    background-color: var(--color-complement);
    border: 1px solid var(--color-accent);
    border-radius: 10px;
    overflow: hidden;
}

#group-repository-form__form {
    padding: 1rem 2rem 1rem 2rem;
}

#group-repository-form__form label {
    margin-bottom: 0.5rem;
}

#group-repository-form__form input, #group-repository-form__form textarea {
    margin: 0 0 1rem 1rem;
    border: none;
    border-bottom: 2px solid lightgray;
}

.group-repository-form__header {
    border-bottom: 1px solid var(--color-accent);

    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
    color: var(--color-complement);
}

#char_count_long_name, #char_count_short_name {
    font-size: x-small;
    padding-bottom: 10px;
}

/* Set a style for the  button */
#group-repository-form__form button, #group-repository-form__form a {
    padding: 0;
    margin-bottom: 1rem;
    background-color: var(--color-complement);
    border: 1px solid var(--color-accent);
    border-radius: 10px;
    overflow: hidden;

    height: 3rem;
    line-height: 3rem;
    text-align: center;
    color: black;
    font-size: 1rem;
    text-decoration: none;
}

/*Add some hover effects to buttons */
#group-repository-form__form button:hover, #group-repository-form__form a:hover {
    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
    cursor: pointer;
}

.group-repository__wrapper {
    position: relative;
    padding: 0 1rem 0 1rem;
}

.repository_container {
    background-color: var(--color-secondary);
    margin: 1rem 0 1rem 0;
    visibility: visible;
    border-radius: 10px;

}

#open-modal__button {
    padding: 0.5rem 1rem 0.5rem 1rem;
    font-size: x-large;
    height: 3rem;
    margin: 1rem 1rem 1rem auto;
}

#group-repository-info__wrapper {
    align-items: start;
}

#group-repository-information {
    margin: 1rem;
}

.group-statistics__flex-container {
    display: flex;
    flex-direction:column;
}

.data-charts__flex-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart, #group-chart__time-chart {
    flex-grow: 1;
    overflow: hidden;
    height: 500px;
}

.graph__dropdown {
    margin-top: 5px;
    max-width: fit-content;
}

.graphs-dropdown__button  {
    position: relative;
    border: 1px solid var(--color-accent) !important;
    color: black;
    background-color: var(--color-complement) !important;
    padding: 10px;
    height: 3rem;
    border-radius: 5px;
    font-size: 1rem;
    font-weight: bold;
    text-decoration: none;
    box-shadow: none !important;
}

.graphs-dropdown__button:hover {
    color: #f78e55;
    border-color: #f78e55;
    background-color: #f4ebe6;
    height: 3rem;
    box-shadow: none !important;
    font-size: 1rem;
}

.graphs-dropdown__button:active {
    background-color: #f78e55;
}


.chart__dropdown_item:active {
    background-color: #f78e55;
}

.dropdown-menu {
    cursor: pointer;
}

a {
    text-decoration: none;
}

a.hover {
    text-decoration: none;
}

